--- a/index.html
+++ b/index.html
@@ -8,76 +8,117 @@
       background: #111;
       color: #fff;
       font-family: sans-serif;
-      text-align: center;
-      padding: 30px;
+      margin: 0;
+      padding: 20px;
     }
     h1 {
+      text-align: center;
       margin-bottom: 10px;
     }
-    .pais {
-      margin-top: 30px;
-      font-size: 22px;
-      color: #00c9a7;
-      border-bottom: 1px solid #333;
-      padding-bottom: 10px;
-    }
-    button {
-      padding: 10px 15px;
-      margin: 8px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background-color: #00c9a7;
+    .boton-abrir-todo {
+      display: block;
+      margin: 20px auto;
+      background: #00c9a7;
       color: black;
+      padding: 12px 20px;
+      border: none;
+      font-size: 16px;
+      border-radius: 10px;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #00e6be;
+    .boton-abrir-todo:hover {
+      background: #00e6be;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+      gap: 15px;
+    }
+    iframe {
+      width: 100%;
+      height: 250px;
+      border: none;
+      border-radius: 10px;
+    }
+    .card {
+      background: #222;
+      padding: 10px;
+      border-radius: 12px;
+      text-align: center;
+    }
+    .externo {
+      background-color: #00c9a7;
+      color: black;
+      text-decoration: none;
+      padding: 10px 15px;
+      display: inline-block;
+      margin-top: 10px;
+      border-radius: 8px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>🌎 Panel Multiview Noticias LATAM</h1>
-  <p>Hacé clic en los botones para abrir los canales en vivo en nuevas ventanas</p>
 
-  <!-- Argentina -->
-  <div class="pais">🇦🇷 Argentina</div>
-  <button onclick="abrir('https://www.youtube.com/@TodoNoticias/live')">TN</button>
-  <button onclick="abrir('https://www.youtube.com/@C5N/live')">C5N</button>
-  <button onclick="abrir('https://www.youtube.com/@LaNacionMas/live')">LN+</button>
-  <button onclick="abrir('https://www.youtube.com/@CRONICATV/live')">Crónica</button>
+  <h1>📰 Multiview Noticias LATAM</h1>
+  <button class="boton-abrir-todo" onclick="abrirTodos()">🖥️ Abrir todos los canales en ventanas</button>
 
-  <!-- Paraguay -->
-  <div class="pais">🇵🇾 Paraguay</div>
-  <button onclick="abrir('https://www.youtube.com/@NoticiasPY/live')">Noticias PY</button>
-  <button onclick="abrir('https://www.youtube.com/@C9NParaguay/live')">C9N Paraguay</button>
-  <button onclick="abrir('https://www.youtube.com/@Unicanal/live')">Unicanal</button>
-  <button onclick="abrir('https://www.youtube.com/@SNTParaguay/live')">SNT</button>
+  <div class="grid">
 
-  <!-- Chile -->
-  <div class="pais">🇨🇱 Chile</div>
-  <button onclick="abrir('https://www.youtube.com/@24HorasTVN/live')">24 Horas (TVN)</button>
-  <button onclick="abrir('https://www.youtube.com/@MEGANOTICIASCL/live')">Mega Noticias</button>
-  <button onclick="abrir('https://www.youtube.com/@T13/live')">Canal 13 - T13</button>
-  <button onclick="abrir('https://www.youtube.com/@chvnoticias/live')">CHV Noticias</button>
+    <div class="card">
+      <p>🇦🇷 TN</p>
+      <iframe src="https://www.youtube.com/embed/live_stream?channel=UCj6PcyLvpnIRT_2W_mwa9Aw" allowfullscreen></iframe>
+    </div>
 
-  <!-- Uruguay -->
-  <div class="pais">🇺🇾 Uruguay</div>
-  <button onclick="abrir('https://www.youtube.com/@Canal10Uruguay/live')">Canal 10</button>
-  <button onclick="abrir('https://www.youtube.com/@TeledoceUy/live')">Teledoce</button>
-  <button onclick="abrir('https://www.youtube.com/@Canal4UY/live')">Canal 4</button>
+    <div class="card">
+      <p>🇦🇷 C5N</p>
+      <iframe src="https://www.youtube.com/embed/live_stream?channel=UCFgk2Q2mVO1BklRQhSv6p0w" allowfullscreen></iframe>
+    </div>
 
-  <!-- Brasil -->
-  <div class="pais">🇧🇷 Brasil</div>
-  <button onclick="abrir('https://www.youtube.com/@CNNBrasil/live')">CNN Brasil</button>
-  <button onclick="abrir('https://www.youtube.com/@BandJornalismo/live')">Band Jornalismo</button>
-  <button onclick="abrir('https://www.youtube.com/@RecordNews/live')">Record News</button>
-  <button onclick="abrir('https://www.youtube.com/@JovemPanNews/live')">Jovem Pan News</button>
+    <div class="card">
+      <p>🇨🇱 24 Horas (TVN)</p>
+      <a class="externo" href="https://www.youtube.com/@24HorasTVN/live" target="_blank">Ver en vivo</a>
+    </div>
+
+    <div class="card">
+      <p>🇵🇾 C9N Paraguay</p>
+      <a class="externo" href="https://www.youtube.com/@C9NParaguay/live" target="_blank">Ver en vivo</a>
+    </div>
+
+    <div class="card">
+      <p>🇺🇾 Canal 10 Uruguay</p>
+      <a class="externo" href="https://www.youtube.com/@Canal10Uruguay/live" target="_blank">Ver en vivo</a>
+    </div>
+
+    <div class="card">
+      <p>🇧🇷 CNN Brasil</p>
+      <a class="externo" href="https://www.youtube.com/@CNNBrasil/live" target="_blank">Ver en vivo</a>
+    </div>
+
+    <div class="card">
+      <p>🌍 France 24 Español</p>
+      <a class="externo" href="https://www.youtube.com/@FRANCE24Esp/live" target="_blank">Ver en vivo</a>
+    </div>
+
+  </div>
 
   <script>
-    function abrir(url) {
-      window.open(url, '_blank', 'width=600,height=400');
+    function abrirTodos() {
+      const urls = [
+        "https://www.youtube.com/@TodoNoticias/live",
+        "https://www.youtube.com/@C5N/live",
+        "https://www.youtube.com/@24HorasTVN/live",
+        "https://www.youtube.com/@C9NParaguay/live",
+        "https://www.youtube.com/@Canal10Uruguay/live",
+        "https://www.youtube.com/@CNNBrasil/live",
+        "https://www.youtube.com/@FRANCE24Esp/live"
+      ];
+      urls.forEach(url => {
+        window.open(url, '_blank', 'width=600,height=400');
+      });
     }
   </script>
+
 </body>
 </html>
+
